# ScienceFairTemp

./: CMakeLists.txt  MPU6050ReadWriteSystem.uf2  README.md  main.c
